public/v/release-5.0/_sources/repositories_and_packages/isaac_ros_benchmark/benchmarks/isaac_ros_moveit_benchmark/index.rst.txt
==============
|package_name|
==============

Overview
--------

Isaac ROS MoveIt Benchmark consists of utility packages to measure the performance
of various `MoveIt 2 <https://moveit.picknik.ai/main/index.html>`__ plugins, including Isaac ROS cuMotion, on various motion planning problems.
Metrics related to planner performance, such as motion time and planning time, as well as
metrics related to system usage, such as CPU usage are computed to provide a comprehensive
view of planner performance.

The problems are sourced from the `MotionBenchmarkMaker (MBM) <https://arxiv.org/abs/2112.06402>`__ dataset. The benchmark supports
the `UR5 CB3 <https://www.universal-robots.com/products/cb3/>`__ robot and the `Franka <https://franka.de/>`__ robot.

The ``isaac_ros_moveit_benchmark`` provides a standardized, convenient method to benchmark
various planners that are available as  `MoveIt 2 <https://moveit.picknik.ai/main/index.html>`__ plugins. 

To see how ``isaac_ros_moveit_benchmark`` is used to benchmark some specific planners, consult
the following packages:

* UR5:

  * :ir_repo:`UR5 cuMotion Benchmark <isaac_ros_benchmark> <benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/ur5/isaac_ros_ur5_cumotion_benchmark>`

  * :ir_repo:`UR5 OMPL Benchmark <isaac_ros_benchmark> <benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/ur5/isaac_ros_ur5_ompl_benchmark>`

* Franka:

  * :ir_repo:`Franka cuMotion Benchmark <isaac_ros_benchmark> <benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/franka/isaac_ros_franka_cumotion_benchmark>`

  * :ir_repo:`Franka OMPL Benchmark <isaac_ros_benchmark> <benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/franka/isaac_ros_franka_ompl_benchmark>`

Setup
-----

Set Up Development Environment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: /_snippets/set_up_dev_env.rst

Build the Benchmarks
^^^^^^^^^^^^^^^^^^^^

.. tabs::

   .. tab:: Binary Package

      1. Activate the Isaac ROS environment:

         .. code:: bash

            isaac-ros activate

      2. Install the prebuilt Debian package:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-ur5-cumotion-benchmark ros-:ir_ros_distro:-isaac-ros-ur5-ompl-benchmark ros-:ir_ros_distro:-isaac-ros-franka-cumotion-benchmark ros-:ir_ros_distro:-isaac-ros-franka-ompl-benchmark

   .. tab:: Build from Source

      1. Clone this repository under ``${ISAAC_ROS_WS}/src``:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/src && \
               git clone :ir_clone:`<isaac_ros_benchmark>`

      2. Activate the Isaac ROS environment:

         .. code:: bash

            isaac-ros activate

      3. Use ``rosdep`` to install the package's dependencies:

         :ir_apt:

         .. code:: bash

            rosdep update && \
            rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_benchmark/benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/ur5/isaac_ros_ur5_cumotion_benchmark --ignore-src -y && \
            rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_benchmark/benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/ur5/isaac_ros_ur5_ompl_benchmark --ignore-src -y && \
            rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_benchmark/benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/franka/isaac_ros_franka_cumotion_benchmark --ignore-src -y && \
            rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_benchmark/benchmarks/isaac_ros_moveit_benchmark/isaac_ros_moveit_robot_benchmark/franka/isaac_ros_franka_ompl_benchmark --ignore-src -y

      4. Build the package from source:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/ && \
               colcon build --symlink-install --packages-up-to isaac_ros_ur5_cumotion_benchmark isaac_ros_ur5_ompl_benchmark isaac_ros_franka_cumotion_benchmark isaac_ros_franka_ompl_benchmark

      5. Source the ROS workspace:

         .. note::

            Repeat this step in **every** terminal created inside the Isaac ROS environment.

            Because this package was built from source, the enclosing workspace must be sourced for ROS to be able to find the package's contents.

         .. code:: bash

            source install/setup.bash

Running the Benchmark
---------------------

.. tabs::
   .. group-tab:: UR5 cuMotion

      .. code:: bash

         launch_test $(ros2 pkg prefix isaac_ros_ur5_cumotion_benchmark)/share/isaac_ros_ur5_cumotion_benchmark/ur5_cumotion_benchmark_scripts/ur5_cumotion_mbm.py

   .. group-tab:: UR5 OMPL

      .. code:: bash

         launch_test $(ros2 pkg prefix isaac_ros_ur5_ompl_benchmark)/share/isaac_ros_ur5_ompl_benchmark/ur5_ompl_benchmark_scripts/ur5_ompl_mbm.py

   .. group-tab:: Franka cuMotion

      .. code:: bash

         launch_test $(ros2 pkg prefix isaac_ros_franka_cumotion_benchmark)/share/isaac_ros_franka_cumotion_benchmark/franka_cumotion_benchmark_scripts/franka_cumotion_mbm.py

   .. group-tab:: Franka OMPL

      .. code:: bash

         launch_test $(ros2 pkg prefix isaac_ros_franka_ompl_benchmark)/share/isaac_ros_franka_ompl_benchmark/franka_ompl_benchmark_scripts/franka_ompl_mbm.py

Interpreting Benchmark Results
------------------------------

MoveIt planner benchmarks report planner metrics rather than frame-rate metrics. The
primary validation value is the planner's success rate. In the console report this
is shown as ``Planning Success Rate (%)``. In the exported JSON report the same
metric appears under the planner name as ``PlannerPerformanceMetrics.PLANNING_SUCCESS_RATE``.

Use ``Mean Planning Time (ms)`` / ``PlannerPerformanceMetrics.MEAN_PLANNING_TIME``
as the primary timing metric when comparing planner performance. Motion time, path
length, jerk, and CPU/GPU resource metrics are supplemental metrics for comparing
trajectory quality and system load. The MBM benchmark scripts also include
``per_problem_metrics`` in the JSON report so individual results can be inspected
in dataset order during validation.

For example, a cuMotion MBM report is structured like this:

.. code:: json

   {
     "cuMotion": {
       "PlannerPerformanceMetrics.PLANNING_SUCCESS_RATE": 100.0,
       "PlannerPerformanceMetrics.MEAN_PLANNING_TIME": 12.3,
       "PlannerPerformanceMetrics.MEAN_MOTION_TIME": 1.7,
       "PlannerPerformanceMetrics.MEAN_PATH_LENGTH": 2.4,
       "PlannerPerformanceMetrics.MEAN_JERK": 42.0,
       "per_problem_metrics": [
         {
           "planning_time": 11.8,
           "motion_time": 1.6,
           "path_length": 2.3,
           "max_jerk": 40.0
         }
       ]
     },
     "metadata": {
       "BenchmarkMetadata.NAME": "Isaac ROS cuMotion Node MBM Benchmark"
     }
   }

Do not expect ``BasicPerformanceMetrics.MEAN_FRAME_RATE_(FPS)`` or playback FPS
fields from these scripts. Those fields are produced by graph throughput
benchmarks that replay message streams; the UR5 and Franka MoveIt benchmarks send
motion-planning requests and validate the returned plans.

Available Metrics
-----------------

.. list-table::
   :header-rows: 1

   * - Metric Name
     - Explanation
     - Interpretation

   * - Success Rate
     - The percentage of successful plans over all problems.
     - A higher success rate is better, because it indicates that the planner can work across a variety of scenarios.

   * - Planning Time
     - The time taken by the planner to compute a valid plan.
     - A lower planning time is better, because it indicates that the planner can generate plans faster.

   * - Motion Time
     - The time it would take the robot to execute the plan generated by the planner.
     - A lower motion time is better, because a robot can execute the plan faster.

   * - Path Length
     - The total path length of the plan in radians (as measured in joint space, using an unweighted L2 norm).
     - A lower path length is better, because it means that the robot needs to move less to execute the plan.

   * - Jerk
     - The maximum jerk along the planned trajectory.
     - A lower jerk is better, because it means that the trajectory is smoother and can be tracked more easily by the robot controller.

.. |package_name| replace:: ``isaac_ros_moveit_benchmark``
